--- a/package.json
+++ b/package.json
@@ -25,18 +25,26 @@
     "url": "https://github.com/ahmadnassri/metalsmith-paths/issues"
   },
   "scripts": {
-    "test": "standard && mocha --reporter spec",
-    "coverage": "istanbul cover ./node_modules/mocha/bin/_mocha",
+    "pretest": "standard && echint",
+    "test": "mocha",
+    "posttest": "npm run coverage",
+    "coverage": "istanbul cover --dir coverage _mocha -- -R dot",
     "codeclimate": "codeclimate < coverage/lcov.info"
+  },
+  "echint": {
+    "ignore": [
+      "coverage/**"
+    ]
   },
   "devDependencies": {
     "codeclimate-test-reporter": "0.0.4",
-    "istanbul": "^0.3.13",
-    "mocha": "^2.2.4",
-    "should": "^6.0.1",
-    "standard": "^3.7.1"
+    "echint": "^1.1.1",
+    "istanbul": "^0.3.14",
+    "mocha": "^2.2.5",
+    "should": "^6.0.3",
+    "standard": "^3.11.1"
   },
   "dependencies": {
-    "debug": "^2.1.3"
+    "debug": "^2.2.0"
   }
 }
