--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "test": "mocha",
     "posttest": "npm run coverage",
     "coverage": "istanbul cover --dir coverage _mocha -- -R dot",
-    "codeclimate": "codeclimate < coverage/lcov.info"
+    "codeclimate": "codeclimate-test-reporter < coverage/lcov.info"
   },
   "echint": {
     "ignore": [
@@ -37,12 +37,12 @@
     ]
   },
   "devDependencies": {
-    "codeclimate-test-reporter": "0.0.4",
-    "echint": "^1.2.0",
-    "istanbul": "^0.3.14",
+    "codeclimate-test-reporter": "0.1.0",
+    "echint": "^1.5.0",
+    "istanbul": "^0.3.18",
     "mocha": "^2.2.5",
-    "should": "^6.0.3",
-    "standard": "^4.0.1"
+    "should": "^7.0.4",
+    "standard": "^5.1.0"
   },
   "dependencies": {
     "debug": "^2.2.0"
