--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "version": "2.1.2",
+  "version": "0.0.0-development",
   "name": "metalsmith-paths",
   "description": "A metalsmith plugin that adds file path values to metadata.",
   "author": "Ahmad Nassri <ahmad@ahmadnassri.com> (https://www.ahmadnassri.com/)",
   "homepage": "https://github.com/ahmadnassri/metalsmith-paths",
-  "repository": "ahmadnassri/metalsmith-paths",
-  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ahmadnassri/metalsmith-paths.git"
+  },
+  "license": "ISC",
   "main": "lib/index.js",
   "keywords": [
     "basename",
@@ -16,35 +19,49 @@
     "plugin"
   ],
   "engines": {
-    "node": ">= 4"
+    "node": ">=4"
   },
   "files": [
-    "lib"
+    "lib",
+    "src"
   ],
   "bugs": {
     "url": "https://github.com/ahmadnassri/metalsmith-paths/issues"
   },
   "scripts": {
-    "pretest": "standard && echint",
-    "test": "mocha",
-    "posttest": "npm run coverage",
-    "coverage": "istanbul cover --dir coverage _mocha -- -R dot",
-    "codeclimate": "codeclimate-test-reporter < coverage/lcov.info"
+    "compile": "babel -q src",
+    "test": "BABEL_ENV=test tap test/*.js --node-arg=--require --node-arg=babel-register | tap-mocha-reporter spec",
+    "pretest": "snazzy && echint",
+    "coverage": "BABEL_ENV=test tap test/*.js --coverage --nyc-arg=--require --nyc-arg=babel-register",
+    "codeclimate": "nyc report --reporter=text-lcov | codeclimate-test-reporter",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+  },
+  "standard": {
+    "ignore": [
+      "lib/**"
+    ]
   },
   "echint": {
     "ignore": [
-      "coverage/**"
+      "lib/**"
     ]
   },
-  "devDependencies": {
-    "codeclimate-test-reporter": "0.4.0",
-    "echint": "^1.5.3",
-    "istanbul": "^0.4.2",
-    "mocha": "^3.0.1",
-    "should": "^11.0.0",
-    "standard": "^8.0.0"
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   },
-  "dependencies": {
-    "debug-log": "^1.0.0"
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-env": "0.0.8",
+    "babel-register": "^6.18.0",
+    "codeclimate-test-reporter": "^0.4.0",
+    "cz-conventional-changelog": "^1.2.0",
+    "echint": "^1.5.3",
+    "semantic-release": "^6.3.2",
+    "snazzy": "^5.0.0",
+    "tap": "^8.0.1",
+    "tap-mocha-reporter": "^3.0.0"
   }
 }
