ci: adopt template-node-lib

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,7 @@
-# http://editorconfig.org
+# ----------------------------------------------- #
+# Note: this file originates in template-template #
+# ----------------------------------------------- #
+
 root = true
 
 [*]
@@ -11,3 +14,6 @@ trim_trailing_whitespace = true
 
 [*.md]
 trim_trailing_whitespace = false
+
+[Makefile]
+indent_style = tab
