feat: update to node v14+
BREAKING CHANGE: only supporting node >= v14

--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
-  "version": "0.0.0-development",
+  "version": "0.0.0-semantically-released",
   "name": "metalsmith-paths",
-  "description": "A metalsmith plugin that adds file path values to metadata.",
-  "author": "Ahmad Nassri <ahmad@ahmadnassri.com> (https://www.ahmadnassri.com/)",
-  "homepage": "https://github.com/ahmadnassri/metalsmith-paths",
+  "description": "A metalsmith plugin that adds file path values to metadata",
+  "author": "Ahmad Nassri <opensource@ahmadnassri.net> (https://www.ahmadnassri.com)",
+  "homepage": "https://github.com/ahmadnassri/node-metalsmith-paths",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ahmadnassri/metalsmith-paths.git"
+    "url": "https://github.com/ahmadnassri/node-metalsmith-paths.git"
   },
-  "license": "ISC",
-  "main": "lib/index.js",
+  "bugs": {
+    "url": "https://github.com/ahmadnassri/node-metalsmith-paths/issues"
+  },
+  "funding": {
+    "type": "individual",
+    "url": "https://github.com/sponsors/ahmadnassri"
+  },
+  "license": "MIT",
   "keywords": [
     "basename",
     "dirname",
@@ -19,23 +25,19 @@
     "plugin"
   ],
   "engines": {
-    "node": ">=4"
+    "node": ">=14"
   },
   "files": [
-    "lib"
+    "src"
   ],
-  "bugs": {
-    "url": "https://github.com/ahmadnassri/metalsmith-paths/issues"
-  },
+  "main": "src/index.js",
   "scripts": {
-    "lint": "standard && echint",
-    "pretest": "npm run lint",
-    "test": "tap test",
-    "coverage": "tap test --reporter silent --coverage"
+    "test": "tap test --no-coverage",
+    "test:ci": "tap test --100",
+    "test:watch": "tap test --watch",
+    "test:report": "opener coverage/lcov-report/index.html"
   },
   "devDependencies": {
-    "echint": "^4.0.1",
-    "standard": "^12.0.0",
-    "tap": "^12.0.0"
+    "tap": "^16.3.2"
   }
 }
